--- a/contrib/FocalTechTouch.vcxproj.filters
+++ b/contrib/FocalTechTouch.vcxproj.filters
@@ -1,103 +1,100 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\src\device.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\driver.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\hid.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\idle.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\init.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\power.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\queue.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\report.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\resolutions.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\spb.c">
-      <Filter>Source</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\include\spb.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\resolutions.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\queue.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\internal.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\idle.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\hidCommon.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\hid.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\driver.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\device.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\debug.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\controller.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\config.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Resources</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Include\ftinternal.h">
-      <Filter>Include</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="DriverFiles">
-      <UniqueIdentifier>{009884e8-d401-4e35-a720-c55c1360ddc7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source">
-      <UniqueIdentifier>{032bcc58-f472-4f89-a4da-de95d6484bb1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Include">
-      <UniqueIdentifier>{7e723844-6d56-4f07-8738-66f6ecf00897}</UniqueIdentifier>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{f2fa0c72-647d-400d-b18f-95a63aa5eeca}</UniqueIdentifier>
     </Filter>
     <Filter Include="Resources">
-      <UniqueIdentifier>{8663f327-1431-46f6-a2b5-e235ae7dcd2c}</UniqueIdentifier>
+      <UniqueIdentifier>{22e35757-3564-41d1-919f-a3331bc1b341}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Driver Files">
+      <UniqueIdentifier>{25cea26e-6fe9-489d-9f3f-494d76c39c07}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{fb139949-95da-4a79-9f64-ff14ea801e7b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="FocalTechTouch.rc">
+    <ClCompile Include="..\src\device.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\driver.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\hid.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\idle.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\init.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\power.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\queue.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\report.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\resolutions.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\spb.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\src\Resource.rc">
       <Filter>Resources</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <Inf Include="..\src\FocalTechTouch.inf">
-      <Filter>DriverFiles</Filter>
+      <Filter>Driver Files</Filter>
     </Inf>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\include\controller.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\device.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\driver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\hid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\idle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\internal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\queue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\resolutions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\spb.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\HidCommon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Include\ftinternal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\trace.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
