--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,6 @@
 [Rr]eleases/
 x64/
 x86/
-arm/
-arm64/
 bld/
 [Bb]in/
 [Oo]bj/
@@ -26,6 +24,7 @@ bld/
 
 # Visual Studio 2015 cache/options directory
 .vs/
+.vscode/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -261,3 +260,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+RCa*
